# ET-Task-03-agentic-ai

./: .env.example  .gitignore  pyproject.toml  requirements.txt
scripts/: debug_embeddings.py  inspect_store.py  inspect_store_real.py  reset_db.py  setup_db.py
src/core/: config.py
src/prompts/: assistant.py  reflector.py
src/services/: database.py  embeddings.py  llm.py  reflector.py
src/ui/: app.py  components.py
src/utils/: limiter.py
src/workflow/: builder.py  nodes.py  state.py
tests/: test_db.py  test_logic.py
